# LOGOS

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  manage.ps1  old_block.txt  package-lock.json  parse_test.py  pyproject.toml  temp_batch_before.txt  temp_patch.txt  test_ocr_claw.py  validation_current.py
.openclaw/: workspace-state.json
app/: blocklist.txt  main.py  models.py  remote_filler_types.txt
app/api/: dependencies.py  schemas.py
app/core/: config.py  database.py  document_profiles.py  enums.py  schema.py  storage.py
app/mock_services/: chatgpt_doc_classifier.py  chatgpt_json_filler.py  chatgpt_ocr.py  classifier_hints.json  (+7 more)
bot/: README.md  deploy.ps1  main.py
docs/: OVERVIEW.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
test frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
test_data_excel/: _tmp_long.xlsx  _tmp_test.xlsx  _tmp_test_hidden.xlsx  _tmp_test_print.xlsx  _tmp_test_print_hidden.xlsx  _tmp_test_print_hidden_clear.xlsx  arac_ivoice.xlsx  excel_to_pdf_per_sheet.py
test_ocr/: new_report.json  test_json_filler.py  testim.py
tests/: test_batch_upload_source_pages.py  test_classification_api_first.py  test_document_assembler_pipeline.py  test_document_profiles.py  test_document_versions.py  test_field_bbox_grounder.py  test_openclaw_doc_assembler.py  test_openclaw_doc_classifier.py  test_openclaw_json_filler.py  test_openclaw_ocr.py  test_product_matrix.py  test_validation_profiles.py
(+257 files in other folders)
